loadbalancer.tf
#aws_elb_service_account

data "aws_elb_service_account" "root" {}

#aws_lb
resource "aws_lb" "nginx_i" {
  name               = "globo-web-alb-i"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg_i.id]
  subnets            = [aws_subnet.public_subnet1.id, aws_subnet.public_subnet2.id]
  depends_on         = [aws_s3_bucket_policy.allow_access_from_another_account]

  enable_deletion_protection = false

  access_logs {
    bucket  = aws_s3_bucket.web_bucket.id
    prefix  = "alb_logs"
    enabled = true
  }

  tags = local.common_tags
}
#aws_lb_tg

resource "aws_lb_target_group" "nginx-i" {
  name     = "nginx-alb-tg-i"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.app.id
}


#Aws_lb_listener

resource "aws_lb_listener" "nginx_i" {
  load_balancer_arn = aws_lb.nginx_i.arn
  port              = "80"
  protocol          = "HTTP"
  #ssl_policy        = "ELBSecurityPolicy-2016-08"
  #certificate_arn   = "arn:aws:iam::187416307283:server-certificate/test_cert_rab3wuqwgja25ct3n4jdj2tzu4"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx-i.arn
  }
}

#aws_lb_target_group_attachment

resource "aws_lb_target_group_attachment" "nginx1_i" {
  target_group_arn = aws_lb_target_group.nginx-i.id
  target_id        = aws_instance.nginx1_i.id
  port             = 80
}

resource "aws_lb_target_group_attachment" "nginx2_i" {
  target_group_arn = aws_lb_target_group.nginx-i.id
  target_id        = aws_instance.nginx2_i.id
  port             = 80
}
